# Nexus

./: .gitattributes  .gitignore  AGENTS.md  Brain2.code-workspace  CHANGELOG-RECENT.md  CHANGELOG.md  INGOC6-LLv0_transcript.txt  README.md  Resume - William Volodarsky.md  Table of Contents.md  pyproject.toml  requirements.txt  start.ps1  styles.css
.agents/skills/analyze_health/: SKILL.md
.agents/skills/analyze_psych/: SKILL.md
.agents/skills/archive_project/: SKILL.md
.agents/skills/career_counselor/: SKILL.md
.agents/skills/conventional_commits/: SKILL.md
.agents/skills/generate_obsidian_note/: SKILL.md
.agents/skills/log_llm_conversation/: SKILL.md
.agents/skills/maintain_project_docs/: SKILL.md
.agents/skills/project_work/: SKILL.md
.agents/skills/skill_creator/: SKILL.md
.agents/skills/workflow_creator/: SKILL.md
.agents/workflows/: add_job_requirement.md  ask_brain.md  audit_inbox.md  capture_content.md  create_new_note.md  create_project.md  distill_learning.md  ingest_medical_record.md  plan_activity.md  render_resume.md
.changeset/: .gitkeep  add-chat-persistence.md  add-console-tracing-chat-repl.md  add-evals-framework.md  add-sync-vault-icons.md  career-agent-hitl-hardening.md  centralize-pydantic-config.md  feat-gui-sse-trace.md  fix-career-agent-400.md  fix-email-router-tools.md  fix-env-legacy-imports.md  fix-gui-double-response.md  gui-router-wiring.md  ignore-db-files-8f7b2.md  migrate-pip-to-uv.md  move-secrets-dir.md  refactor-agent-architecture.md  refactor-agents-md.md  refactor-career-agent-tools.md  restructure-engine-to-nexus-package.md  update-nexus-cli-entry-point.md  update-project-skills.md  update-readme-structure-and-tools.md  uv-workflow-modernization.md
1. Foundational Mathematics & Statistics/: Calculus Overview.md  Differentiation & Partial Derivatives.md  Overview - Linear Algebra.md  Probability Distributions.md
2. Programming & Software Engineering/: NumPy.md  Pandas.md  Python.md  SQL Overview.md
3. Machine Learning Fundamentals/: Linear Regression.md  Logistic Regression.md  Supervised Learning.md
5. Natural Language Processing (NLP) & Vector Search/: Prompt Engineering.md  Retrieval Augmented Generation (RAG).md  Vector Databases.md
6. Intelligent Agents & Autonomy/: AI Agents.md  Function Calling & Structured Outputs.md  Model Context Protocol (MCP).md  Multi-Agent Systems & Orchestration.md
7. Data Processing, Engineering & MLOps/: Data Collection & Acquisition.md
Vault/: 0. Quick Capture.md  Project Maturity Checklist.md  Table of Contents.md
Vault/.obsidian/: app.json  app.sync-conflict-20260318-184157-SOOVU5C.json  appearance.json  core-plugins.json  graph.json  workspace-mobile.json  workspace.json
Vault/.obsidian/snippets/: headers.css
Vault/.stfolder/: syncthing-folder-e61d79.txt
Vault/1. The Core/1.1. Philosophy & Personal North Star/: Current Learning.md  Currently Learning.md  Protocol - Daily Operational Rhythm.md  Shit To Do.md  To Do List.md
Vault/1. The Core/1.2. Personal Knowledge Management (PKM)/: BatchRun_CDrive_to_MainBackup.ffs_batch  Laptop App List Update Protocol.md  Project - Brain 2 Next Level.md  Project - Brain 2 Obsidian Functionality Upgrades.md  Project - Public Release Strategy & Radical Transparency.md  Protocol - Laptop App List Update.md  Protocol - Monthly Hard Drive Backup.md  Protocol - New Note Template.md  Protocol - System Maintenance.md  System Maintenance.md  Workshop - Agentic Medical Data Architecture - Agentic Doctor Panel.md  Workshop - Public Release Strategy & Radical Transparency.md
Vault/2. Health/2.1. Fitness/: Exercise Schedule & Planning.md  (+1 more)
Vault/3. Operations & Wealth/: The Bogle Heads.md
Vault/4. Playground/: Education List.md  Jokes.md  Movie List.md
Vault/5. Playground/: Education List.md  Movie List.md
engine/: ask_brain.py  brain_voice.py  eval_rag.py  ingest_vault.py  main.py
engine/api/: main.py
engine/core/: constants.py  google_auth.py  seed_hitl.py  trace.py
engine/evals/: dataset.json  runner.py
engine/interfaces/: telegram.py  voice.py
engine/shared_tools/: __init__.py  shared.py  vault_reader.py
engine/tools/: chroma_tool.py  email_tool.py  text_utils.py  vault_tools.py
gui/: package-lock.json  package.json
logs/: chats.db
scripts/: add_gitkeeps.py  check_folders.py  create_folders.py  generate_podcast.py
src/nexus/: __init__.py  main.py
tools/: backup_vault.py  create_folders.py  generate_podcast.py  ingest_phone.py  medical_xml_parser.py  read_email.py  release.py  sync_vault.py  youtube_transcript.py
tools/resume_engine/: inspect_docx.js  package-lock.json  package.json  render.js  render_docx.py  style.css
zImages/: Markdown Cheat Sheet.md
(+293 files in other folders)
