[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "0.1.0"
description = "Nexus Agentic Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "babel==2.18.0",
    "bcrypt==5.0.0",
    "build==1.4.3",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.2",
    "colorama==0.4.6",
    "courlan==1.3.2",
    "cryptography==48.0.0",
    "dataclasses-json==0.6.7",
    "dateparser==1.4.0",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "durationpy==0.10",
    "edge-tts==7.2.7",
    "executing==2.2.1",
    "fastapi==0.136.3",
    "filelock==3.29.0",
    "flatbuffers==25.12.19",
    "frozenlist==1.8.0",
    "fsspec==2026.3.0",
    "google-api-core==2.30.3",
    "google-api-python-client==2.196.0",
    "google-auth==2.52.0",
    "google-auth-httplib2==0.4.0",
    "google-auth-oauthlib==1.4.0",
    "googleapis-common-protos==1.74.0",
    "greenlet==3.4.0",
    "grpcio==1.80.0",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "htmldate==1.9.4",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.11.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "importlib-resources==7.1.0",
    "ipython==9.13.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.14.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "justext==3.0.2",
    "kubernetes==35.0.0",
    "langchain==1.2.15",
    "langchain-classic==1.0.4",
    "langchain-community==0.4.1",
    "langchain-core==1.2.31",
    "langchain-openai==1.1.12",
    "langchain-tavily==0.2.18",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.1.6",
    "langgraph-checkpoint==4.0.1",
    "langgraph-prebuilt==1.0.9",
    "langgraph-sdk==0.3.13",
    "langsmith==0.7.30",
    "lxml==6.1.0",
    "lxml-html-clean==0.4.4",
    "markdown-it-py==4.0.0",
    "marshmallow==3.26.2",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mmh3==5.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "numpy==2.4.4",
    "oauthlib==3.3.1",
    "onnxruntime==1.24.4",
    "openai==2.31.0",
    "opentelemetry-api==1.41.0",
    "opentelemetry-exporter-otlp-proto-common==1.41.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.41.0",
    "opentelemetry-proto==1.41.0",
    "opentelemetry-sdk==1.41.0",
    "opentelemetry-semantic-conventions==0.62b0",
    "orjson==3.11.8",
    "ormsgpack==1.12.2",
    "overrides==7.7.0",
    "packaging==26.0",
    "parso==0.8.6",
    "pillow==12.2.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "proto-plus==1.28.0",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pyaudio==0.2.14",
    "pybase64==1.4.3",
    "pycparser==3.0",
    "pydantic==2.13.0",
    "pydantic-core==2.46.0",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pypika==0.51.1",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "python-telegram-bot==22.7",
    "pytz==2026.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2026.4.4",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rpds-py==0.30.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.49",
    "stack-data==0.6.3",
    "starlette==1.1.0",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tld==0.13.2",
    "tokenizers==0.22.2",
    "tqdm==4.67.3",
    "trafilatura==2.0.0",
    "traitlets==5.14.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "tzlocal==5.3.1",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn==0.44.0",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "youtube-transcript-api==1.2.4",
    "zipp==3.23.1",
    "zstandard==0.25.0",
]

[project.scripts]
nexus = "nexus.main:main"
